try create task issue on mobile

--- a/src/components/taskcreate.css
+++ b/src/components/taskcreate.css
@@ -808,6 +808,7 @@
     }
     .editable-input-container {
         pointer-events: auto;
+        z-index: 9999;
       }
       
     
